--- a/data.html
+++ b/data.html
@@ -56,13 +56,16 @@
 
     <!-- main content -->
     <main class="bg-white border-b py-8 grow">
-      <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-        Data
-      </h2>
-      <div class="w-full mb-4">
-        <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+      <div class="container max-w-5xl mx-auto m-10">
+        <div class="text-center">
+          <img class="max-h-72 inline" src="img/data.svg" alt="data illustration">
+        </div>
+        <h3 class="text-3xl text-gray-800 font-bold leading-none my-3 text-center">
+            Data
+        </h3>
       </div>
-      <div id="app" class="container max-w-8xl m-auto my-14"></div>
+
+      <div id="app" class="container max-w-8xl m-auto mt-1 mb-14"></div>
     </main>
 
 
