--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               Data
             </h3>
             <p class="text-gray-600">
-              Open Data:
+              <a href="https://en.wikipedia.org/wiki/Open_data" target="_blank" class="text-sky-600 hover:underline font-semibold">Open data</a>:
               <ul class="text-gray-600 list-disc ml-6">
                 <li>is accessible to everyone</li>
                 <li>is available in open, non-proprietary formats</li>
@@ -118,9 +118,13 @@
                 Apps
               </h3>
               <p class="text-gray-600">
-                Mecklenburg County GIS believes in the power of open source software to achieve reliable, flexible,
-                high-performance, and cost effective solutions. Not only do we use open source software, we create
-                and release open source software to help others and to ensure transparency and trust in government.
+                <a href="http://en.wikipedia.org/wiki/Open-source_software" target="_blank" class="text-sky-600 font-semibold hover:underline">Open source software</a> gives you the freedom to:
+                <ul class="text-gray-600 list-disc ml-6">
+                  <li>run the program for any purpose</li>
+                  <li>study how the program works and to change it so it does computing as you wish</li>
+                  <li>redistribute copies so you can help your neighbor</li>
+                  <li>distribute copies of your modified versions to others, giving the community a chance to benefit from your changes</li>
+                </ul>
               </p>
               <p class="mt-4">
                 Pull requests are welcome!
