--- a/apps.html
+++ b/apps.html
@@ -55,22 +55,40 @@
 
 
     <!-- main content -->
-    <main class="bg-white border-b py-8 grow">
-      <h2 class="w-full my-2 mt-8 text-5xl font-bold leading-tight text-center text-gray-800">
-        Apps We Made
-      </h2>
-      <div class="w-full mb-4">
-        <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+    <main class="bg-white border-b py-8">
+
+      <div class="container max-w-5xl mx-auto m-8 mb-24">
+        <div class="container max-w-5xl mx-auto m-10 mb-24">
+          <div class="text-center">
+            <img class="max-h-72 inline" src="img/apps.svg" alt="data illustration">
+          </div>
+          <h3 class="text-3xl text-gray-800 font-bold leading-none my-3 mt-5 text-center">
+              Our Open Source Apps
+          </h3>
+        </div>
       </div>
+
+
+
       <div id="apps" class="container max-w-8xl m-auto my-14"></div>
 
-      <h2 class="w-full my-2 mt-24 text-5xl font-bold leading-tight text-center text-gray-800">
-        Projects We <span class="text-primaryPoppyRed">❤</span>
-      </h2>
-      <div class="w-full mb-4">
-        <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+      <div class="container max-w-3xl mx-auto m-8 mt-28">
+        <h3 class="text-center text-3xl text-gray-800 font-bold leading-none mb-3">
+              Projects We <span class="text-primaryPoppyRed">❤</span>
+            </h3>
+            <div class="w-full mb-4">
+              <div class="mx-auto h-1 gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
+            </div>
+            <div class="text-lg px-6">
+              In addition to releaseing some of our projects as open source software, Mecklenburg County GIS uses
+              open source software to deliver innovative and cost effective solutions. Some of the open source
+              projects we use are:
+            </div>
       </div>
-      <div id="projects" class="container max-w-8xl m-auto my-14"></div>
+
+
+
+      <div id="projects" class="container max-w-3xl m-auto my-14 px-6"></div>
     </main>
 
 
