set img width and height

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="w-full container mx-auto flex flex-wrap items-center justify-between mt-0 py-2">
         <div class="pl-4 flex items-center">
 
-          <img src="img/logo.svg" alt="open mapping logo" class="h-7 lg:h-10" style="filter: brightness(0) invert(1);">
+          <img src="img/logo.svg" alt="open mapping logo" class="w-7 h-7 lg:w-10 lg:h-10" style="filter: brightness(0) invert(1);">
           <h1 class="text-2xl font-bold lg:text-4xl ml-1"> <a href="./">OPEN MAPPING</a></h1>
         </div>
 
